kubernetes/apps/home-assistant/ns.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  annotations:
    volsync.backube/privileged-movers: "true"
