kubernetes/apps/home-assistant/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/httproute.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    ipallowlist: "true"
  annotations:
    gatus.home-operations.com/endpoint: |
      url: http://home-assistant-app.home-assistant.svc.cluster.local:8123
      alerts:
        - type: discord
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - ha.axis.scottmckendry.tech
  rules:
    - backendRefs:
        - name: home-assistant-app
          port: 8123
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-code
  namespace: home-assistant
  labels:
    ipallowlist: "true"
    auth: "required"
  annotations:
    gatus.home-operations.com/endpoint: |
      url: http://home-assistant-code.home-assistant.svc.cluster.local:8081
      alerts:
        - type: discord
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - ha-code.axis.scottmckendry.tech
  rules:
    - backendRefs:
        - name: home-assistant-code
          port: 8081
